# game_club

./: Cargo.toml  properties.json  rustfmt.toml
.zed/: tasks.json
assets/: game.tiled-project  game.tiled-session  map.tmx  tilemap.tsx
assets/games/snake/sounds/: enemy_deathBoom.bfxr  muzicRandom.bfxr
assets/maps/: map.tmx
assets/textures/games/snake/sounds/: Hit.bfxr  enemy_shoot.bfxr
src/: game.rs  level.rs  lib.rs  main.rs  player.rs  state.rs  tilemap.rs
src/components/: mod.rs
src/games/: mod.rs
src/games/snake/: mod.rs
src/machines/snake/: snake.rs
