[package]
name = "game_club"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17" }
bevy_ecs_tiled = { version = "0.10", features=["user_properties"] }
bevy_ecs_tilemap = "0.17"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
panic = "abort"
